[package]
name = "raytracing_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
vulkano-win = "0.30.0"
bytemuck = "1.10.0"
image = "0.24.3"
winit = "0.26.1"
